--- a/02-app-workflow/public/index.html
+++ b/02-app-workflow/public/index.html
@@ -4,8 +4,13 @@
         <meta charset="UTF-8" />
         <title>Khanon.js 01 - Blank project</title>
         <link rel="stylesheet" href="app.css" />
+
     </head>
     <body>
+        <div id="loading-screen">
+            <div id="loading-screen-text">LOADING APPLICATION</div>
+            <div id="loading-screen-spinner" class="loader"></div>
+        </div>
         <div id="khanonjs"></div>
     </body>
 </html>
