--- a/02-app-workflow/public/index.html
+++ b/02-app-workflow/public/index.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon.js 01 - Blank project</title>
+        <title>Khanon.js 02 - App Workflow</title>
         <link rel="stylesheet" href="app.css" />
 
     </head>
     <body>
+        <!--
         <div id="loading-screen">
             <div id="loading-screen-text">LOADING APPLICATION</div>
             <div id="loading-screen-spinner" class="loader"></div>
         </div>
+        // 8a8f  -->
         <div id="khanonjs"></div>
     </body>
 </html>
