Tutorial 02 source code

--- a/01-blank-project/public/index.html
+++ b/01-blank-project/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon.js 01 - Blank project</title>
+        <title>Khanon.js 01 Blank project</title>
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
