Tutorial app workflow source code

--- a/03-app-workflow/public/index.html
+++ b/03-app-workflow/public/index.html
@@ -7,12 +7,9 @@
 
     </head>
     <body>
-        <!--
-        <div id="loading-screen">
-            <div id="loading-screen-text">LOADING APPLICATION</div>
-            <div id="loading-screen-spinner" class="loader"></div>
+        <div id="loading-background">
+            <div id="loading"></div>
         </div>
-        // 8a8f  -->
         <div id="khanonjs"></div>
     </body>
 </html>
