--- a/03-app-workflow/public/index.html
+++ b/03-app-workflow/public/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="loading-background">
-            <div id="loading"></div>
+            <div id="loading" class="initial-loading"></div>
         </div>
         <div id="khanonjs"></div>
     </body>
