--- a/04-loading-sprites/public/index.html
+++ b/04-loading-sprites/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon.js 01 - Blank project</title>
+        <title>Khanon.js 04 Loading 2D sprites and particles</title>
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
