--- a/04-loading-sprites/public/index.html
+++ b/04-loading-sprites/public/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
+        <div id="loading-background">
+            <div id="loading" class="initial-loading"></div>
+        </div>
         <div id="khanonjs"></div>
     </body>
 </html>
