--- a/05-loading-meshes/public/index.html
+++ b/05-loading-meshes/public/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon.js 01 - Blank project</title>
+        <title>Khanon.js 04 Loading 2D sprites and particles</title>
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
+        <div id="loading-background">
+            <div id="loading" class="initial-loading"></div>
+        </div>
         <div id="khanonjs"></div>
     </body>
 </html>
