--- a/06-working-with-actors/public/index.html
+++ b/06-working-with-actors/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Khanon.js 04 Loading 2D sprites and particles</title>
+        <title>Khanon.js 06 Working with actors</title>
         <link rel="stylesheet" href="app.css" />
     </head>
     <body>
